Versão 2.0 da aplicação de negociações

--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,7 @@
     <script src="js/app/views/MensagemView.js"></script>
     <script src="js/app/sevices/ProxyFactory.js"></script>
     <script src="js/app/sevices/NegociacaoService.js"></script>
+    <script src="js/app/sevices/HttpService.js"></script>
     <script src="js/app/helpers/Bind.js"></script>
 
     <script>
